other-mpol/inject-coco-mtls-sidecar/.chainsaw-test/exception/pod-sibling-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-sibling
  namespace: default
spec:
  (containers[?name=='coco-sidecar'] | length(@) == `1`): true
  (length(containers) == `2`): true
  containers:
  - name: app
    image: nginx:1.20
  - name: coco-sidecar
    image: ghcr.io/confidential-containers/secure-sidecar:v1.0
