other-mpol/inject-coco-mtls-sidecar/.chainsaw-test/exception/pod-unchanged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-pod
  namespace: default
  labels: {coco: enabled}
  annotations: {coco.io/sidecar-config: coco-sidecar-config}
spec:
  (containers[?name=='coco-sidecar'] | length(@) == `0`): true
  (length(containers) == `1`): true
  containers: [{name: app, image: nginx:1.20}]
